autocommit
Took 5 hours 19 minutes